JumpScript/tests/baselines/reference/parserSkippedTokens5.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens5.jump(1,1): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens5.jump (1 errors) ====
    \ /*foo*/ ;
    
!!! error TS1127: Invalid character.